# velora

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: auto-fix.yml  release-crate.yml
config/: README.md  backtesting.toml  base.toml  live-trading.toml  paper-trading.toml  testing.toml
crates/velora/: BUILD.md  Cargo.toml  README.md
crates/velora-backtest/: Cargo.toml  README.md
crates/velora-backtest/examples/: sma_backtest.rs
crates/velora-backtest/src/: backtester.rs  config.rs  errors.rs  execution.rs  lib.rs  performance.rs  portfolio.rs
crates/velora-core/: Cargo.toml
crates/velora-core/examples/: config_loading.rs
crates/velora-core/src/: errors.rs  lib.rs  types.rs
crates/velora-core/src/config/: database.rs  engine.rs  exchange.rs  logging.rs  mod.rs  risk.rs
crates/velora-core/tests/: config_tests.rs
crates/velora-core/tests/fixtures/: test_base.toml  test_override.toml
crates/velora-data/: Cargo.toml
crates/velora-data/src/: lib.rs
crates/velora-data/src/storage/: mod.rs  questdb.rs
crates/velora-engine/: Cargo.toml  README.md
crates/velora-engine/examples/: dry_run_trading.rs
crates/velora-engine/src/: config.rs  engine.rs  errors.rs  events.rs  execution.rs  lib.rs  order_manager.rs  position_tracker.rs
crates/velora-exchange/: Cargo.toml
crates/velora-exchange/examples/: README.md  exchange_validation.rs  lighter_validation.rs  paradex_validation.rs  websocket_streaming.rs
crates/velora-exchange/src/: lib.rs
crates/velora-exchange/src/auth/: api_key.rs  evm_wallet.rs  mod.rs  starknet_wallet.rs
crates/velora-exchange/src/common/: factory.rs  mod.rs  rate_limiter.rs  rest_client.rs  websocket.rs
crates/velora-exchange/src/exchanges/: mod.rs
crates/velora-exchange/src/exchanges/lighter/: account.rs  client.rs  market_data.rs  market_data_test.rs  mod.rs  streaming.rs  trading.rs  types.rs
crates/velora-exchange/src/exchanges/paradex/: account.rs  client.rs  market_data.rs  mod.rs  streaming.rs  trading.rs  types.rs
crates/velora-exchange/src/traits/: account.rs  exchange.rs  market_data.rs  mod.rs  streaming.rs  trading.rs
crates/velora-exchange/src/types/: account.rs  candle.rs  common.rs  error.rs  instrument.rs  market.rs  mod.rs  order.rs  orderbook.rs  stream.rs  trade.rs
crates/velora-risk/: Cargo.toml
crates/velora-risk/src/: lib.rs
crates/velora-strategy/: Cargo.toml
crates/velora-strategy/examples/: sma_crossover_strategy.rs
crates/velora-strategy/src/: context.rs  errors.rs  lib.rs  strategy.rs  types.rs
crates/velora-ta/: Cargo.toml  FUTURE_INDICATORS.md  README.md
crates/velora-ta/src/: errors.rs  lib.rs  mod.rs  traits.rs  types.rs
crates/velora-ta/src/momentum/: cci.rs  macd.rs  mod.rs  momentum.rs  roc.rs  rsi.rs  stochastic.rs  tsi.rs  williams_r.rs
crates/velora-ta/src/patterns/: detector.rs  double.rs  mod.rs  single.rs  triple.rs
crates/velora-ta/src/statistical/: correlation.rs  linear_regression.rs  mod.rs  zscore.rs
crates/velora-ta/src/trend/: adx.rs  aroon.rs  dema.rs  ema.rs  hma.rs  kama.rs  mod.rs  parabolic_sar.rs  sma.rs  smma.rs  supertrend.rs  tema.rs  vortex.rs  vwma.rs  wma.rs
crates/velora-ta/src/utils/: circular_buffer.rs  math.rs  mod.rs
crates/velora-ta/src/volatility/: atr.rs  bollinger_bands.rs  donchian.rs  keltner.rs  mod.rs  std_dev.rs  true_range.rs
crates/velora-ta/src/volume/: ad.rs  cmf.rs  emv.rs  force_index.rs  mfi.rs  mod.rs  obv.rs  vwap.rs
crates/velora-ta/src/williams/: alligator.rs  awesome_oscillator.rs  fractals.rs  mod.rs
crates/velora/examples/: live_trading.rs  simple_backtest.rs  strategy_development.rs
crates/velora/src/: lib.rs
crates/velora/tests/: integration_test.rs
scripts/: verify_config.sh
