[package]
name = "velora-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, errors, and utilities for the Velora HFT platform"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
gonfig = { workspace = true }
gonfig_derive = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
