[package]
name = "velora-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Market data ingestion, storage, and streaming for Velora"
keywords.workspace = true
categories.workspace = true

[dependencies]
velora-core = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
