[package]
name = "velora-exchange"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Exchange integrations and connectivity for Velora"
keywords.workspace = true
categories.workspace = true

[dependencies]
velora-core = { workspace = true }
velora-data = { workspace = true }

# Async runtime and utilities
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
pin-project = "1.1"

# HTTP client and WebSocket
reqwest = { workspace = true, features = ["json"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
url = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }

# Cryptography and signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Ethereum wallet support (for Lighter)
ethers = { version = "2.0", optional = true }

# Starknet wallet support (for Paradex)
starknet = { version = "0.11", optional = true }
starknet-crypto = { version = "0.7", optional = true }

# Decimal precision
rust_decimal = { workspace = true }
rust_decimal_macros = "1.36"

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Rate limiting
governor = "0.6"

# Backoff and retry
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
dotenv = "0.15"
tracing-subscriber = "0.3"

[features]
default = ["lighter", "paradex"]
binance = []
lighter = ["ethers"]
paradex = ["starknet", "starknet-crypto"]
all = ["binance", "lighter", "paradex"]
